# sabori_csp

./: .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  TODO.md  pyproject.toml
python/: CMakeLists.txt  _bindings.cpp
python/sabori_csp/: __init__.py  _expressions.py  _globals.py  _model.py  _solver.py  claude_helper.py
python/sabori_csp/core/: __init__.py
src/core/: CMakeLists.txt  Makefile  bounds_domain.cpp  cmake_install.cmake  community_analysis.cpp  constraint.cpp  domain.cpp  gradient_strategy.cpp  model.cpp  model.cpp~  model_simplifier.cpp  nogood_manager.cpp  one_hot_channel_aggregator.cpp  solver.cpp  solver.cpp~  solver_frame.cpp  solver_propagate.cpp  solver_search.cpp  sparse_domain.cpp  variable.cpp  variable_selector.cpp
src/core/constraints/: arithmetic.cpp  comparison.cpp  comparison.cpp~  global.cpp  logical.cpp
src/core/constraints/global/: all_different.cpp  all_different_except_0.cpp  all_different_gac.cpp  array_int_maximum.cpp  array_int_minimum.cpp  array_var_int_element.cpp  circuit.cpp  connected.cpp  count_eq.cpp  cumulative.cpp  diffn.cpp  disjunctive.cpp  increasing.cpp  int_element.cpp  int_element_monotonic.cpp  int_lin_base.cpp  int_lin_eq.cpp  int_lin_eq.cpp~  int_lin_eq_ne_reif.cpp  int_lin_eq_reif.cpp  int_lin_le.cpp  int_lin_le_imp.cpp  int_lin_le_reif.cpp  int_lin_ne.cpp  int_lin_ne_reif.cpp  int_one_hot_channel.cpp  inverse.cpp  lin_term_order.hpp  nvalue.cpp  regular.cpp  table.cpp
src/fzn/: CMakeLists.txt  Makefile  cmake_install.cmake  constraint_registry.cpp  constraint_registry.hpp  fzn_build_context.cpp  fzn_build_context.hpp  fzn_parser.cpp  fzn_parser.hpp  lexer.ll  main.cpp  main.cpp~  model.cpp  model.cpp~  parser.yy
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/cpp/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_alldifferent.cpp  test_arith_logical.cpp  test_cmp_reif_brute.cpp  test_constraints.cpp  test_cumulative_brute.cpp  test_diffn_brute.cpp  test_disjunctive_brute.cpp  test_domain_model.cpp  test_element_table.cpp  test_find_all_consistency.cpp  test_global_constraints.cpp  test_graph_constraints.cpp  test_lin_reif_brute.cpp  test_linear_constraints.cpp  test_mode_reward_policy.cpp  test_nogood.cpp  test_one_hot_channel.cpp  test_restart_controller.cpp  test_sabori_csp-b12d07c_include.cmake  test_solver_misc.cpp  test_sparse_set_pool.cpp
tests/fzn/constraints/all_equal/: basic.expected  basic.fzn  single.expected  single.fzn  unsat.fzn  with_fixed.expected  with_fixed.fzn
tests/fzn/constraints/alldifferent/: hall_set.expected  hall_set.fzn  simple.expected  simple.fzn  unsat.fzn
tests/fzn/constraints/alldifferent_except_0/: all_solutions.expected  hall_pair.expected  hall_pair.fzn  hall_pair_with_zero.expected  hall_pair_with_zero.fzn  hall_pair_zero_skip.expected  hall_pair_zero_skip.fzn  simple.expected  simple.fzn  unsat.fzn
tests/fzn/constraints/array_bool_and/: all_true.expected  all_true.fzn  force_zero.expected  force_zero.fzn  unsat.fzn
tests/fzn/constraints/array_bool_element/: simple.expected  simple.fzn  unsat.fzn
tests/fzn/constraints/array_bool_or/: all_false.expected  all_false.fzn  force_one.expected  force_one.fzn  unsat.fzn
tests/fzn/constraints/array_bool_xor/: all_solutions.fzn  simple.expected  simple.fzn  two_vars.expected  two_vars.fzn  unsat.fzn
tests/fzn/constraints/array_int_maximum/: negative.expected  negative.fzn  simple.expected  simple.fzn  single.expected  single.fzn
tests/fzn/constraints/array_int_minimum/: negative.expected  negative.fzn  simple.expected  simple.fzn  single.expected  single.fzn
tests/fzn/constraints/array_var_bool_element/: simple.expected  simple.fzn  unsat.fzn
tests/fzn/constraints/array_var_int_element/: propagation.expected  propagation.fzn  result_fixed.expected  result_fixed.fzn  simple.expected  simple.fzn  unsat.fzn
tests/fzn/constraints/bool2int/: basic.expected  basic.fzn  false_case.expected  false_case.fzn  reverse.expected  reverse.fzn  unsat.fzn
tests/fzn/constraints/bool_clause/: empty.fzn  mixed.expected  mixed.fzn  negated.expected  negated.fzn  simple.expected  simple.fzn  unit.expected  unit.fzn
tests/fzn/constraints/bool_lin_eq/: exactly_2.expected  exactly_2.fzn  unsat.fzn  weighted.expected  weighted.fzn
tests/fzn/constraints/bool_lin_le/: at_most_1.expected  at_most_1.fzn  unsat.fzn
tests/fzn/constraints/bool_lt_reif/: simple.expected  simple.fzn  unsat.fzn
tests/fzn/constraints/bool_not/: a_false.expected  a_false.fzn  a_true.expected  a_true.fzn  b_true.fzn  (+1 more)
tests/fzn/output_format/: satisfy_single.fzn  test_output_format.sh
tests/fzn/problems/: hitori_bug_investigation.fzn  hitori_bug_minimal.fzn
tests/golden/: corpus.txt  excluded.txt  run_golden.sh
tests/golden/expected/: all_equal_basic.txt  all_equal_single.txt  alldifferent_except_0_all_solutions.txt  alldifferent_except_0_hall_pair.txt  alldifferent_except_0_hall_pair_with_zero.txt  alldifferent_except_0_hall_pair_zero_skip.txt  alldifferent_except_0_unsat.txt  alldifferent_hall_set.txt  alldifferent_simple.txt  array_bool_and_all_true.txt  array_bool_and_force_zero.txt  array_bool_element_simple.txt  array_bool_or_all_false.txt  array_bool_or_force_one.txt  array_bool_xor_all_solutions.txt  array_bool_xor_simple.txt  array_int_maximum_negative.txt  array_int_maximum_simple.txt  array_int_maximum_single.txt  array_int_minimum_negative.txt  array_int_minimum_simple.txt  array_int_minimum_single.txt  array_var_bool_element_simple.txt  array_var_int_element_propagation.txt  array_var_int_element_result_fixed.txt  array_var_int_element_simple.txt  bool2int_basic.txt  bool2int_false_case.txt  bool_clause_mixed.txt  bool_clause_negated.txt  bool_clause_simple.txt  bool_clause_unit.txt  bool_lin_eq_exactly_2.txt  bool_lin_eq_weighted.txt  bool_lin_le_at_most_1.txt  bool_lt_reif_simple.txt  bool_not_a_true.txt  bool_not_b_true.txt  bool_xor_all_solutions.txt  circuit_simple.txt  (+144 more)
tests/python/: test_claude_helper.py  test_expressions.py  test_globals.py  test_model.py
(+560 files in other folders)
